--- a/css/main2.css
+++ b/css/main2.css
@@ -7,6 +7,7 @@
 #h4footer
 {
     border-bottom: 1px solid grey;
+    text-align: center;
 }
 
 #featured
@@ -22,4 +23,9 @@
 #privacy
 {
     text-decoration: underline;
+}
+
+#textfoot
+{
+    text-align: center;
 }
